@@ -1,3 +1,10 @@
+2016-04-24  Werner Lemberg  <wl@gnu.org>
+
+	[truetype] Fix deallocation in case of error (#47726).
+
+	* src/truetype/ttgload.c (load_truetype_glyph): Initialize fields in
+	`outline' that are going to be deallocated in case of error.
+
 2016-04-23  Werner Lemberg  <wl@gnu.org>
 
 	[autofit] Improve Georgian blue zone characters.
